# holycard_server

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  example.env  manage.py  pyproject.toml
card/: admin.py  models.py  views.py
card/migrations/: 0001_initial.py
holycard_server/: adapter.py  asgi.py  settings.py  urls.py  wsgi.py
templates/admin/: login.html
