[tool.poetry]
name = "holycard-server"
version = "0.1.0"
description = ""
authors = ["Pin Lin <pinlin945@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
django-ratelimit = "^4.1.0"
django-redis = "^5.4.0"
gunicorn = "^23.0.0"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
whitenoise = {extras = ["brotli"], version = "^6.7.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
